--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -13,7 +13,7 @@
     $(document).ready(async function() {
       const pageno = getPageno();
       const result = await fetch(pageno);
-      console.log(result);
+      printContacts(result.contacts);
     });
   </script>
   <title>Document</title>
